--- a/versionning.html
+++ b/versionning.html
@@ -5,6 +5,10 @@
     <title></title>
   </head>
   <body>
-    <p> Salut les amis </p> 
+    <img src="https://i.pinimg.com/564x/49/ad/7f/49ad7ff620dafc4888389b65c6c9cdff.jpg" alt="" class="img">
+    <img src="https://i.pinimg.com/564x/00/20/44/002044422cd68241ca74b4cadf86a0ce.jpg" alt="" class="img2">
+    <img src="https://i.pinimg.com/564x/3f/e9/4e/3fe94e149b010d521140eb6c7118ba23.jpg" alt="" class=>
+    <img src="https://i.pinimg.com/564x/c5/82/08/c58208cf688b2db2cf9243e0439fb7a1.jpg" alt="">
+    <img src="https://i.pinimg.com/564x/cd/65/46/cd65468652be0cf722db6bc99559b4c8.jpg" alt="">
   </body>
 </html>
