--- a/versionning.html
+++ b/versionning.html
@@ -6,9 +6,21 @@
   </head>
   <body>
     <img src="https://i.pinimg.com/564x/49/ad/7f/49ad7ff620dafc4888389b65c6c9cdff.jpg" alt="" class="img">
-    <img src="https://i.pinimg.com/564x/00/20/44/002044422cd68241ca74b4cadf86a0ce.jpg" alt="" class="img2">
-    <img src="https://i.pinimg.com/564x/3f/e9/4e/3fe94e149b010d521140eb6c7118ba23.jpg" alt="" class=>
-    <img src="https://i.pinimg.com/564x/c5/82/08/c58208cf688b2db2cf9243e0439fb7a1.jpg" alt="">
-    <img src="https://i.pinimg.com/564x/cd/65/46/cd65468652be0cf722db6bc99559b4c8.jpg" alt="">
+    <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix
+      aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim
+      appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari
+      circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia
+      partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita
+      quadam aeternitate tradunt omnia despectare terrena.</p>
+    <img src="https://i.pinimg.com/564x/00/20/44/002044422cd68241ca74b4cadf86a0ce.jpg" alt="" class="img">
+    <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix
+      aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim
+      appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari
+      circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia
+      partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita
+      quadam aeternitate tradunt omnia despectare terrena.</p>
+    <img src="https://i.pinimg.com/564x/3f/e9/4e/3fe94e149b010d521140eb6c7118ba23.jpg" alt="" class="img3">
+    <img src="https://i.pinimg.com/564x/c5/82/08/c58208cf688b2db2cf9243e0439fb7a1.jpg" alt="" class="img4">
+    <img src="https://i.pinimg.com/564x/cd/65/46/cd65468652be0cf722db6bc99559b4c8.jpg" alt="" class="img5">
   </body>
 </html>
