--- a/versionning.html
+++ b/versionning.html
@@ -17,10 +17,22 @@
           <article class="form"> <input type="text" name="nom" placeholder="Nom" style="height: 20px; font-size: 15px; font-family: Roboto" class="nom"/><img src="icone.png" alt="" class="icone"> </article>
           <article class="form"> <input type="text" name="prenom" placeholder="Prénom" style="height: 20px; font-size: 15px; font-family: Roboto" class="nom"/><img src="icone.png" alt="" class="icone"> </article>
           <article class="form"> <input type="text" name="email" placeholder="Email" style="height: 20px; font-size: 15px; font-family: Roboto" class="nom"/><img src="icone.png" alt="" class="icone"> </article>
-          <article><input type="checkbox" name="check"> Je souhaite recevoir la newsletter d'HTC </article> 
-          <button> AVERTISSEZ MOI ! </button>
+          <article><input type="checkbox" name="check"> Je souhaite recevoir la newsletter d'HTC </article>
+          <article> <button> AVERTISSEZ MOI !</button>
+          <img src="fleche.png" alt="" class="fleche">
+         <img src="fleche.png" alt="" class="fleche">
+         <img src="fleche.png" alt="" class="fleche"></article>
       </form>
-    </form>
   </article>
+</section>
+  <br> <br>
+  <section class="section2">
+  <img src="https://www.freepnglogos.com/uploads/htc-logo-13.png" class="partenaire" alt="">
+  <img src="http://telemedcorp.com/img/logo/qualcomm-life-dark.png" class="partenaire" alt="">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Fitbit_logo.svg/2000px-Fitbit_logo.svg.png" alt="" class="partenaire">
+  <img src="http://www.stickpng.com/assets/images/5854654328fc2508128fec5b.png" class="partenaire" alt="">
+  <img src="http://www.yamaha.com/YECDealerMedia/adgraphs/products/YAMAHA_logomark_2010_BLACK.png" class="partenaire" alt="">
+  <img src="http://www.pngmart.com/files/1/Volkswagen-PNG-Pic.png" class="partenaire" alt="">
+</section>
   </body>
 </html>
