--- a/versionning.html
+++ b/versionning.html
@@ -34,5 +34,9 @@
   <img src="http://www.yamaha.com/YECDealerMedia/adgraphs/products/YAMAHA_logomark_2010_BLACK.png" class="partenaire" alt="">
   <img src="http://www.pngmart.com/files/1/Volkswagen-PNG-Pic.png" class="partenaire" alt="">
 </section>
+</br></br> 
+<section class="section3">
+  <p class="CGU"> CONDITIONS GÉNÉRALES </br></br> Les informations demandées à l’inscription au site sont nécessaires et obligatoires pour être averti et en particulier, l'adresse électronique. Le site assure à l'Utilisateur une collecte et un traitement d'informations personnelles dans le respect de la vie privée conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés. </p>
+</section>
   </body>
 </html>
