--- a/versionning.html
+++ b/versionning.html
@@ -18,10 +18,10 @@
           <article class="form"> <input type="text" name="prenom" placeholder="Prénom" style="height: 20px; font-size: 15px; font-family: Roboto" class="nom"/><img src="icone.png" alt="" class="icone"> </article>
           <article class="form"> <input type="text" name="email" placeholder="Email" style="height: 20px; font-size: 15px; font-family: Roboto" class="nom"/><img src="icone.png" alt="" class="icone"> </article>
           <article><input type="checkbox" name="check"> Je souhaite recevoir la newsletter d'HTC </article>
-          <article> <button> AVERTISSEZ MOI !</button>
+          <article> <button class="bouton"> AVERTISSEZ MOI !</button>
           <img src="fleche.png" alt="" class="fleche">
          <img src="fleche.png" alt="" class="fleche">
-         <img src="fleche.png" alt="" class="fleche"></article>
+         <img src="fleche.png" alt="" class="fleche"> </article>
       </form>
   </article>
 </section>
