--- a/versionning.html
+++ b/versionning.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title> Landingpage HTC </title>
     <link href="versionning.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
